Update SEO meta tags and branding

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,9 +5,9 @@
     "orientation": "portrait",
     "scope": "/",
     "start_url": "/",
-    "name": "WendoJ",
-    "short_name": "WendoJ",
-    "description": "Full-stack website developer and TypeScript enthusiast.",
+    "name": "Abhiraj Gupta",
+    "short_name": "Abhiraj",
+    "description": "Full-stack Developer | MERN | AI-ML.",
     "icons": [
         {
             "src": "/icon-192x192.png",
