update short name

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,7 +6,7 @@
     "scope": "/",
     "start_url": "/",
     "name": "Abhiraj Gupta",
-    "short_name": "Abhiraj",
+    "short_name": "DWExAbhiraj",
     "description": "Full-stack Developer | MERN | AI-ML.",
     "icons": [
         {
